fix example container overflow style

--- a/examples/bunny-twirl/styles.css
+++ b/examples/bunny-twirl/styles.css
@@ -2,6 +2,7 @@ html {
   background-color: #1099bb;
   padding: 0;
   border: 0;
+  overflow: hidden;
 }
 body {
   background-color: #1099bb;
